Fix broken styles for hero, feature section and project containers
- Switched out new images for projects

- adjusted vh for hero img

- set better spacing for margin of projects section

--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,6 @@ body {
   object-fit: cover;
   background-repeat: no-repeat;
   overflow: hidden;
-  /* height: 24rem; */
   height: 28.5rem;
   max-height: 550px;
 }
@@ -699,10 +698,12 @@ body {
     height: 30rem;
   }
 }
+
 @media screen and (min-width: 428px) and (orientation: portrait) {
   .hero-info-box {
     /* position: relative; */
   }
+
   .projects-container {
     margin-top: 12.25rem;
   }
@@ -1048,7 +1049,7 @@ body {
   }
 }
 
-@media (min-width: 1000px) and (orientation: landscape) {
+@media (min-width: 992px) and (orientation: landscape) {
   .nav-item:hover {
     border-bottom-color: var(--white);
   }
@@ -1058,8 +1059,14 @@ body {
     padding: 1.6rem 0;
   }
 
+  .hero-img {
+    height: 100vh;
+    max-height: 100vh;
+  }
+
   .hero-info-container {
     margin-top: 7.9rem;
+    /* margin-top: 10.9rem; */
   }
 
   .developer-text,
@@ -1072,14 +1079,15 @@ body {
     transform: scale(1.2);
   }
   .projects-container {
-    margin-top: 17rem;
+    /* margin-top: 17rem; */
+    margin-top: 22rem;
   }
   .section-header,
   .section-header-span {
     font-size: 1.6rem;
   }
   .projects-row {
-    max-width: 1024px;
+    /* max-width: 1024px; */
   }
   .project-box {
     position: relative;
@@ -1158,7 +1166,87 @@ body {
   }
 }
 
-@media (min-width: 1200px) and (orientation: landscape) {
+@media (min-width: 1280px) and (orientation: landscape) {
+  .hero-img {
+    height: 75vh;
+    max-height: 712px;
+    /* max-height: 80vh; */
+  }
+  .hero-info-container {
+    margin-top: 9.5rem;
+  }
+  .developer-text,
+  .name,
+  .software-text {
+    font-size: 3rem;
+    letter-spacing: 2px;
+  }
+  .nav-link {
+    font-size: 1rem;
+  }
+  .projects-row {
+    /* max-width: 1080px;
+    max-width: 1038px; */
+    /* width: 94%; */
+  }
+  .section-header,
+  .section-header-span {
+    font-size: 2rem;
+  }
+  .contact-links-container {
+    margin-top: 3.4rem;
+  }
+  .resume-link-container {
+    margin-top: 3.4rem;
+  }
+
+  .projects-container {
+    max-width: inherit;
+  }
+
+  .project-box {
+    /* height: 45.5rem;
+    max-height: 45.5rem; */
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .project-title {
+    font-size: 1.5rem;
+  }
+
+  .project-inner-box {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .project-img-container {
+    max-width: 500px;
+    width: 46%;
+    /* position: relative;
+    bottom: 50px; */
+  }
+
+  .project-info-box {
+    width: 40%;
+    position: relative;
+    bottom: 18px;
+  }
+
+  .project-btn-box {
+    /* width: 492px; */
+    width: 100%;
+    position: static;
+  }
+
+  .project-img {
+    object-fit: cover;
+  }
+}
+
+/* @media (min-width: 1200px) and (orientation: landscape) {
   .developer-text,
   .name,
   .software-text {
@@ -1182,10 +1270,10 @@ body {
   .resume-link-container {
     margin-top: 3.4rem;
   }
-}
+} */
 @media (min-width: 1304px) and (orientation: landscape) {
   .projects-row {
-    max-width: 1175px;
+    /* max-width: 1175px; */
   }
   .project-box {
     /* min-height: 784px; */
@@ -1201,7 +1289,7 @@ body {
 
 @media screen and (min-width: 1366px) and (orientation: landscape) and (hover: none) and (pointer: coarse) {
   .hero-img {
-    height: 42rem;
+    /* height: 42rem; */
   }
 
   .hero-info-container {
@@ -1246,39 +1334,13 @@ body {
 }
 
 @media (min-width: 1332px) and (orientation: landscape) {
-  /* .project-box {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
+  .hero-img {
+    height: 90vh;
+    max-height: 43rem;
   }
-
-  .project-inner-box {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .project-img-container {
-    width: 520px;
-  }
-
-  .project-info-box {
-    width: 40%;
-    position: relative;
-    bottom: 18px;
-  }
-
-  .project-btn-box {
-    width: 492px;
-    position: static;
-  }
-
-  .project-img {
-    object-fit: cover;
-  } */
   .skills-container {
     width: 100%;
-    margin: 9rem auto 4rem;
+    /* margin: 9rem auto 4rem; */
   }
   .current-work-container,
   .tools-container {
@@ -1300,22 +1362,34 @@ body {
   .software-text {
     font-size: 3.5rem;
   }
-  .hero-info-box {
-    /* margin-top: 14rem; */
+
+  .hero-info-container {
+    margin-top: 11.3rem;
   }
+
   .hero-img {
-    max-height: 800px;
+    /* max-height: 800px;
+    height: 50rem; */
+    height: 96vh;
+    max-height: 49rem;
   }
   .projects-container {
-    margin-top: 19rem;
+    margin-top: 27rem;
   }
   .projects-row {
-    margin-top: 6.5rem;
+    margin: 6.5rem auto 17rem auto;
+    /* max-width: 94%; */
+    max-width: 82rem;
   }
   .project-box {
-    height: 46rem;
+    margin-bottom: 13rem;
+    /* height: 46rem;
     max-height: 46rem;
-    max-width: 370px;
+    max-width: 370px; */
+  }
+
+  .project-img-container {
+    max-width: 514px;
   }
   .project-btn-box {
     min-height: 166px;
@@ -1341,6 +1415,7 @@ body {
     padding: 0.5rem;
   }
 }
+
 @media (min-width: 1680px) and (orientation: landscape) {
   .nav-link {
     padding: 1.8rem 0;
@@ -1349,7 +1424,8 @@ body {
     /* margin-top: 16rem; */
   }
   .hero-img {
-    max-height: 900px;
+    max-height: 58rem;
+    height: 90rem;
   }
   .developer-text,
   .name,
@@ -1357,12 +1433,16 @@ body {
     font-size: 3.6rem;
   }
 
+  .hero-info-container {
+    margin-top: 15.3rem;
+  }
+
   .projects-container {
-    margin-top: 22rem;
+    margin-top: 32rem;
   }
   .project-box {
-    height: 49rem;
-    max-height: 49rem;
+    /* height: 49rem;
+    max-height: 49rem; */
   }
   .project-tech-text {
     font-size: 1.1rem;
@@ -1408,6 +1488,7 @@ body {
     bottom: 1rem;
   }
 }
+
 @media (min-width: 1820px) and (orientation: landscape) {
   .developer-text,
   .name,
@@ -1419,8 +1500,8 @@ body {
     margin-top: 16rem;
   } */
   .project-box {
-    height: 51rem;
-    max-height: 51rem;
+    /* height: 51rem;
+    max-height: 51rem; */
   }
   .project-tech-text {
     font-size: 1.2rem;
@@ -1468,9 +1549,10 @@ body {
     font-size: 1.3rem;
   }
 }
+
 @media (min-width: 2000px) and (orientation: landscape) {
   .hero-img {
-    max-height: 950px;
+    /* max-height: 950px; */
   }
   .developer-text,
   .name,
